# raquest

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  flake.nix  gleam.toml
.cache/clangd/index/: main.cpp.D4978AB3DF5830C6.idx  parser.cpp.FE096745AAFADFB6.idx  parser.hpp.6B90DC872C98353B.idx  request.cpp.1111D6D24435FBF8.idx  request.hpp.9BBECC9589E3B4B7.idx
.github/workflows/: ci.yml
examples/: malinformed_section_header.raq  post.raq
examples/errors/: json_missing_key.raq  json_value_mismatch.raq  pe_expected_header_colon.raq  pe_malinformed_section_header.raq
include/: CLI11.hpp  app_context.hpp  assert.hpp  assertion.hpp  assertion_set.hpp  assertions.hpp  config.hpp  curl_request.hpp  curl_response.hpp  error.hpp  file.hpp  json.hpp  lexer.hpp  parser.hpp  printer.hpp  raquest.hpp  regex.hpp  request.hpp  response.hpp  version.hpp
include/errors/: assertion_error.hpp  curl_error.hpp  error.hpp  error_manager.hpp  file_error.hpp  parser_error.hpp  runtime_error.hpp
src/: CMakeLists.txt  assert.cpp  assertion.cpp  assertion_set.cpp  assertions.cpp  config.cpp  curl_request.cpp  curl_response.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  printer.cpp  raquest.cpp  raquest.gleam  request.cpp  response.cpp  thread_pool.cppm
src/errors/: assertion_error.cpp  curl_error.cpp  error_manager.cpp  file_error.cpp  parser_error.cpp  runtime_error.cpp
tests/: CMakeLists.txt  assertions_test.cpp  main.cpp  parser_test.cpp  tautology_test.cpp  thread_pool_test.cpp
